kubernetes/apps/home-assistant/home-assistant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - hass.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8123
